moved input files to the morphology section

--- a/manual/ctp-manual.tex
+++ b/manual/ctp-manual.tex
@@ -68,7 +68,7 @@ pdfpagemode=UseNone]{hyperref}
 \definecolor{invisiblegray}{rgb}{.97,0.97,0.97}
 \definecolor{mygray}{rgb}{0.86,0.86,0.86}
 
-%\makeindex
+\makeindex
 
 \input{newcommands}
 \input{gitid}
