--- a/manual/input/topology_coarsegrained.tex
+++ b/manual/input/topology_coarsegrained.tex
@@ -2,7 +2,7 @@
 \label{sec:xmlmap}
 The mapping file (referred here as \xmlcsg) is used by the program \ctpmap to convert an atomistic trajectory to a trajectory with conjugated segments and rigid fragments. 
 This trajectory is stored in a \slink{statefile}{state file} and contains positions, names, types of atoms belonging to rigid fragments. 
-The description of the mapping options is given in table \ref{tab:map}. An example of \xmlcsg for a \dcvt molecule is shown in listing~\ref{list:map}. 
+The description of the mapping options is given in table \ref{tab:map}. An example of \xmlcsg for a \dcvt molecule is shown in listing~\ref{list:map}.  The structure of \dcvt, together with atom type definitions, is shown in fig.~\ref{fig:dcv2t}. \dcvt has two thiophene (THI) and two dicyanovinyl (NIT) residues. The pdb file which contains residue types, residue numbering, atom names, atom types, and atom coordinates is shown in listing~\ref{list:pdb}.
 
 The file \xmlcsg contains the whole electrostatic information about the molecules as well as the structural information. The \tool{pdb2map} creates a \xmlcsg from a pdb file and is a good starting point for further refinement. 
 %
